# dfbnet-einteilungen

./: .gitignore  .python-version  Dockerfile  app.py  docker-compose.yml  docker-compose.yml.example  example_config.json  main.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: docker-autobuild.yml
assets/: manifest.json  offline.html
pages/: hash.py  home.py  login.py  refs.py
src/: utils.py
