[project]
name = "dfbnet-einteilungen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "argon2-cffi>=23.1.0",
    "beautifulsoup4>=4.13.4",
    "dash>=3.0.3",
    "dash-ag-grid>=31.3.1",
    "dash-auth>=2.3.0",
    "dash-bootstrap-components>=2.0.1",
    "gunicorn>=23.0.0",
    "pandas>=2.2.3",
    "python-pptx>=1.0.2",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.0",
]
